--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<div class="col-12 col-md-6">
 					<h1>Learn <br/>about finance</h1>
 					<p>
-						Get <strong>FREE</strong> and <strong>UNLIMITED</strong> access to<br/>
+						Get <strong>FREE</strong> and <strong>UNLIMITED</strong> access to
 						educational resources to master <br/>your personal finances.
 					</p>
 					<a href="./" class="btn btn-lg btn-gold-primary" id="tellmemore"
