--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						Get <strong>FREE</strong> and <strong>UNLIMITED</strong> access to
 						educational resources to master <br/>your personal finances.
 					</p>
-					<a href="./" class="btn btn-lg btn-gold-primary" id="tellmemore"
+					<a href="#courses" class="btn btn-lg btn-gold-primary" id="tellmemore"
 						>Tell me more &rarr;
 					</a>
 				</div>
