--- a/pages/course-start.html
+++ b/pages/course-start.html
@@ -55,8 +55,10 @@
 						placeholder="Search"
 					/>
 				</form>
-				<p>Hello, Z</p>
-				<img src="../assets/avatar.svg" alt="" />
+				<div class="signed-in">
+					<p>Hello, Z</p>
+					<img src="../assets/avatar.svg" alt="" />
+				</div>
 			</div>
 		</nav>
 
