--- a/pages/signup.html
+++ b/pages/signup.html
@@ -18,22 +18,22 @@
 		<div class="row signup">
 			<div class="col-12 text-center logo">
 				<a href="../index.html" >
-					<img src="../Icons/imali.png" style="width: 15%; height: auto;">
-					</a>
+					<img src="../Icons/imali.png">
+				</a>
 			</div>
-			<div class="col-12 text-center signup-form ">
+			<div class="col-12 text-center signup-form login-signup-switch ">
 				<a href="login.html">
 					<button type="button" class="btn btn-primary btn-lg col-md-2 btn-login2">Log in</button>
 				</a>
 				<button type="button" class="btn btn-secondary btn-lg col-md-2 btn-signup2">Sign up</button>
-		</div>
+			</div>
 		<div class="container-fluid">
 			
 			<!-- Sign up -->
 			<div class="row signup">
 				
 				<div class="col-12 text-center"><h3>Create your account</h3></div>
-				<div class="col-12 offset-sm-4 col-md-4 ">
+				<div class="col-12 offset-sm-4 col-md-4 signup-padding">
 					<form action="">
 						<div class="form-row mt-4">
 							<label for="name">Name</label>
@@ -56,8 +56,8 @@
 								required
 							/>
 						</div>
-						<button type="submit" class="btn btn-outline-dark col-12 button">
-                            Sign up
+						<button type="submit" class="btn btn-primary btn-lg col-12 button">
+                            <a href="./course.html">Sign up</a>
                         </button>
 					</form>
 
