--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
 				</div>
 				
 				<div class="col-12 text-center form-body"><h3>Sign into your account</h3></div>
-					<div class="col-12 offset-sm-4 col-md-4">
+					<div class="col-12 offset-sm-4 col-md-4 signup-padding">
 					<form action="">
 						<div class="form-row mt-4">
 							<label for="email">Email</label>
@@ -56,7 +56,7 @@
 					</form>
 
 					<div class="col-12 text-center password">
-						<a class="toggle-link" href="#">FORGOT PASSWORD</a>
+						<a class="toggle-link" href="#">Forgot Password?</a>
 					</div>
 					<div class="or"></div>
 					
