--- a/pages/login.html
+++ b/pages/login.html
@@ -21,7 +21,7 @@
 			<div class="row signup">
 				<div class="col-12 text-center logo">
 					<a href="../index.html" >
-						<img src="../Icons/imali.png">
+						<img src="../Icons/imali.png" style="width: 15%; height: auto;">
 						</a>
 				</div>
 				
@@ -129,6 +129,6 @@
 		<script src="../node_modules/jquery/dist/jquery.min.js"></script>
 		<script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="../scripts/main.js"></script>
+		<script src="../scripts/course.js"></script>
 	</body>
 </html>
