--- a/index.html
+++ b/index.html
@@ -153,6 +153,6 @@
 		<script src="./node_modules/jquery/dist/jquery.min.js"></script>
 		<script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="./scripts/main.js"></script>
+		<script src="./scripts/courses.js"></script>
 	</body>
 </html>
