--- a/pages/signup.html
+++ b/pages/signup.html
@@ -98,6 +98,6 @@
 		<script src="../node_modules/jquery/dist/jquery.min.js"></script>
 		<script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="../scripts/main.js"></script>
+		<script src="../scripts/course.js"></script>
 	</body>
 </html>
