--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				>
 					<h1>INVEST IN <br/>YOURSELF TODAY</h1>
 					<p>Unlock your financial freedom <br/>with one of our courses</p>
-					<a href="#" class="btn btn-lg btn-blue-primary">GET STARTED > </a>
+					<a href="./pages/signup.html" class="btn btn-lg btn-blue-primary">GET STARTED > </a>
 				</div>
 				<div class="col-12 col-md-1"></div>
 			</div>
