--- a/index.html
+++ b/index.html
@@ -149,57 +149,10 @@
 			</footer>
 		</div>
 
-		<script id="courses-template" type="text/x-handlebars-template">
-			<div class="row courses" id="courses">
-				<div class='col-12 row-title'>
-				  <h2> {{upper title1}} </h2>
-				  <img src="./assets/line.svg" class="line" />
-				  <p> {{subheading1}} </p>
-				</div>
-				  {{#courses}}
-					{{>course-card}}
-				  {{/courses}}
-				</div>
-				<div class="row prerequesites" id="prerequesites">
-					  <div class='col-12 row-title'>
-						<h2> {{upper title2}} </h2>
-						<img src="./assets/line.svg" class="line" />
-						<p> {{subheading2}} </p>
-					  </div>
-					  {{#prerequisites}}
-						<div class="col-12 col-md-4 prequesite">
-						  <img src='{{image}}' alt='requirements' />
-							<title>{{requirement}}</title>
-							<p>{{requirement}}</p>
-						</div> 
-					  {{/prerequisites}}
-				</div>
-		</script>
-
-		<script id="course-card-partial" type="text/x-handlebars-template">
-			<div class="col-12 col-md-4 mt-2">
-				<div class='card'>
-				  <img src='{{image}}' class='card-img-top' alt='course illustration' />
-				  <div class='card-body'>
-					<h3 class='card-title'>
-					  {{upper title}}
-					</h3>
-					<p class='card-text'>
-					  {{summary}}
-					</p>
-					<a href='./pages/course.html' class='btn btn-purple-primary'>
-					  {{buttonText}} >
-					</a>
-				  </div>
-				</div>
-			  </div>
-		</script>
-
 		<script src="./node_modules/handlebars/dist/handlebars.min.js"></script>
 		<script src="./node_modules/jquery/dist/jquery.min.js"></script>
 		<script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="./financial-edu-app.min.js"></script>
-		
+		<script src="./scripts/courses.js"></script>
 	</body>
 </html>
