--- a/pages/course-start.html
+++ b/pages/course-start.html
@@ -240,6 +240,7 @@
 		<script src="../node_modules/jquery/dist/jquery.min.js"></script>
 		<script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="../scripts/main.js"></script>
 		<script src="../scripts/quiz3.js"></script>
 	</body>
 </html>
